@@ -3,7 +3,8 @@
       <complexType name="LayerFilterRequest">
         <all>
           <element name="className" type="xsd:string"/>
-          <element name="criteria" type="types:ArrayOfString"/>
+          <element name="criteria_keys" type="types:ArrayOfString"/>
+          <element name="criteria_values" type="types:ArrayOfString"/>
         </all>
       </complexType>
 
